--- a/assets/web/pertanian_produksi_padi.html
+++ b/assets/web/pertanian_produksi_padi.html
@@ -25,7 +25,7 @@
     </head>
     <script>
 			var data,i;
-			url='https://webapi.bps.go.id/v1/api/list/model/data/domain/3573/var/493/key/9db89e91c3c142df678e65a78c4e547f';
+			url='https://webapi.bps.go.id/v1/api/list/model/data/domain/3573/var/493/th/1:/key/9db89e91c3c142df678e65a78c4e547f';
 			var xhr = new XMLHttpRequest();
 			xhr.open('GET', url, false);
 			xhr.onreadystatechange = function() {
