--- a/assets/web/kependudukan_jenis_kelamin.html
+++ b/assets/web/kependudukan_jenis_kelamin.html
@@ -223,10 +223,10 @@
             </table> -->
             <script> 
 			if(satuanB == ""){
-				document.write('<p align= "center" style="color:rgb(5, 44, 75); font-weight: bold;">PENDUDUK MENURUT JENIS KELAMIN<br>KOTA MALANG, TAHUN '+ thB[pjThData-10] +' - '+ thB[pjThData-1] +'</p>'); 
+				document.write('<p align= "center" style="color:rgb(5, 44, 75); font-weight: bold;">PENDUDUK MENURUT JENIS KELAMIN<br>KOTA MALANG, TAHUN '+ thB[pjThData-maxData] +' - '+ thB[pjThData-1] +'</p>'); 
 			}
 			else{
-				document.write('<p align= "center" style="color:rgb(5, 44, 75); font-weight: bold;">PENDUDUK MENURUT JENIS KELAMIN<br>KOTA MALANG, TAHUN '+ thB[pjThData-10] +' - '+ thB[pjThData-1] +' ('+ satuanB +')</p>'); 
+				document.write('<p align= "center" style="color:rgb(5, 44, 75); font-weight: bold;">PENDUDUK MENURUT JENIS KELAMIN<br>KOTA MALANG, TAHUN '+ thB[pjThData-maxData] +' - '+ thB[pjThData-1] +' ('+ satuanB +')</p>'); 
 			}
 		</script>
    <!--         <table class = "tbl" border = "0" align ="center" style="background-color:transparent; color:rgb(5, 44, 75)">
